--- a/ToDo/MainPage.xaml
+++ b/ToDo/MainPage.xaml
@@ -7,7 +7,25 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="#FFFFFF">
+
+
 
     </Grid>
+
+    <Page.BottomAppBar >
+        <AppBar IsOpen="True" IsSticky="True" Background="#03A9F4">
+            <StackPanel Orientation="Horizontal" Background="#03A9F4">
+                <!--<CommandBar>
+                    -->
+                <!--<CommandBar.SecondaryCommands>
+                        <AppBarButton Name="Hide" Icon="Cancel" Label="Hide Other" Visibility="Collapsed" Click="Show_Click"/>
+                    </CommandBar.SecondaryCommands>-->
+                <!--
+                </CommandBar>-->
+                <!--<AppBarButton Name="Show" Icon="Add"  Click="Add_Click"/>-->
+                <AppBarButton Name="Show" Icon="Add"  />
+            </StackPanel>
+        </AppBar>
+    </Page.BottomAppBar>
 </Page>
