--- a/ToDo/MainPage.xaml
+++ b/ToDo/MainPage.xaml
@@ -51,7 +51,7 @@
                         <AppBarButton Name="Hide" Icon="Cancel" Label="Hide Other" Visibility="Collapsed" Click="Show_Click"/>
                     </CommandBar.SecondaryCommands>-->
                 <AppBarButton Name="Show" Icon="Add"  Click="Add_Click" />
-            <AppBarButton Name="Sync" Icon="Delete"  Click="Logout_Click" />
+            <AppBarButton Name="Sync" Icon="Cancel"  Click="Logout_Click" />
         </CommandBar>
                 
                
