--- a/ToDo/AddPage.xaml
+++ b/ToDo/AddPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="AntiqueWhite">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -16,29 +16,22 @@
             <RowDefinition Height="*"></RowDefinition>
            
         </Grid.RowDefinitions>
-        <StackPanel Margin="30,0,0,0" Grid.Column="0" Grid.Row="0"  HorizontalAlignment="Center" >
+        <StackPanel Margin="20,50,0,0" Grid.Column="0" Grid.Row="0"  HorizontalAlignment="Left" Width="250">
 
-            <TextBlock>Title: </TextBlock>
-            <TextBox x:Name ="titleTexBox"></TextBox>
-            <TextBlock>Value:</TextBlock>
-            <TextBox x:Name ="valueTextBox" ></TextBox>
+           
+            <TextBlock Margin="0,10,0,0">Title: </TextBlock>
+            <TextBox Margin="0,10,0,0" x:Name ="titleTextBox"  ></TextBox>
+            <TextBlock Margin="0,10,0,0">Description:</TextBlock>
+            <TextBox Margin="0,10,0,0" x:Name ="valueTextBox"></TextBox>
         </StackPanel>
 
-        <StackPanel Margin="45,0,0,0" Grid.Column="0" Grid.Row="1"  HorizontalAlignment="Center">
-            <Button  Content="Add" Background="#CDDC39"/>
-        </StackPanel>
-
-
-
-
+        
     </Grid>
-
-
 
     <Page.BottomAppBar >
         <CommandBar Background="#03A9F4">
-            <AppBarButton Name="Show" Icon="Add"   />
-            <AppBarButton Name="Sync" Icon="Cancel"  />
+            <AppBarButton Name="Back" Icon="Back" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
+            <AppBarButton Name="Accept" Icon="Accept" Label="Add" HorizontalAlignment="Left" Click="Accept_Click" />
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
