--- a/ToDo/AddPage.xaml
+++ b/ToDo/AddPage.xaml
@@ -7,23 +7,33 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="AntiqueWhite">
+    <Grid Background="#03A9F4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="50" ></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+           
            
         </Grid.RowDefinitions>
-        <StackPanel Margin="20,50,0,0" Grid.Column="0" Grid.Row="0"  HorizontalAlignment="Left" Width="250">
+        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Add new task</TextBlock>
+        <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
+            <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
 
-           
-            <TextBlock Margin="0,10,0,0">Title: </TextBlock>
-            <TextBox Margin="0,10,0,0" x:Name ="titleTextBox"  ></TextBox>
-            <TextBlock Margin="0,10,0,0">Description:</TextBlock>
-            <TextBox Margin="0,10,0,0" x:Name ="valueTextBox"></TextBox>
-        </StackPanel>
+
+                <TextBlock Margin="0,10,0,0">Title:</TextBlock>
+                <TextBox Margin="0,10,0,0" x:Name ="titleTextBox"  ></TextBox>
+                <TextBlock Margin="0,10,0,0">Description:</TextBlock>
+                <TextBox Margin="0,10,0,0" x:Name ="valueTextBox" AcceptsReturn="False" TextWrapping="Wrap"></TextBox>
+
+
+
+
+            </StackPanel>
+
+        </Border>
+        
 
         
     </Grid>
