--- a/ToDo/EditPage.xaml
+++ b/ToDo/EditPage.xaml
@@ -7,26 +7,29 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="AntiqueWhite">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
+    <Grid Background="#03A9F4">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+
+            <RowDefinition Height="50" ></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
 
             </Grid.RowDefinitions>
-            <StackPanel Margin="20,50,0,0" Grid.Column="0" Grid.Row="0"  HorizontalAlignment="Left" Width="250">
+        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Edittask</TextBlock>
+        <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
+            <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
 
 
                 <TextBlock Margin="0,10,0,0">Title:</TextBlock>
-            <TextBox Margin="0,10,0,0" x:Name ="titleTextBox" Text="{Binding CurrentObject.title}"></TextBox>
+            <TextBox Margin="0,10,0,0" x:Name ="titleTextBox" Text="{Binding CurrentObject.title,  Mode=TwoWay}"></TextBox>
                 <TextBlock Margin="0,10,0,0">Description:</TextBlock>
-                <TextBox Margin="0,10,0,0" x:Name ="valueTextBox"></TextBox>
+                <TextBox Margin="0,10,0,0" x:Name ="valueTextBox" Text="{Binding CurrentObject.value, Mode=TwoWay}"  AcceptsReturn="False" TextWrapping="Wrap"></TextBox>
             </StackPanel>
+        </Border>
 
-
-        </Grid>
+    </Grid>
 
         <Page.BottomAppBar >
             <CommandBar Background="#03A9F4">
