--- a/ToDo/EditPage.xaml
+++ b/ToDo/EditPage.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
-    <Grid Background="#03A9F4">
+    
+        <Grid Background="#03A9F4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -17,9 +17,12 @@
             <RowDefinition Height="*"></RowDefinition>
 
             </Grid.RowDefinitions>
+     
         <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Edittask</TextBlock>
         <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
-            <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
+
+            
+                <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
 
 
                 <TextBlock Margin="0,10,0,0">Title:</TextBlock>
@@ -27,15 +30,17 @@
                 <TextBlock Margin="0,10,0,0">Description:</TextBlock>
                 <TextBox Margin="0,10,0,0" x:Name ="valueTextBox" Text="{Binding CurrentObject.value, Mode=TwoWay}"  AcceptsReturn="False" TextWrapping="Wrap"></TextBox>
             </StackPanel>
+         
         </Border>
-
+        
     </Grid>
-
-        <Page.BottomAppBar >
+  
+    <Page.BottomAppBar >
             <CommandBar Background="#03A9F4">
                 <AppBarButton Name="Back" Icon="Back" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
                 <AppBarButton Name="Accept" Icon="Accept" Label="Add" HorizontalAlignment="Left" Click="Accept_Click" />
-            </CommandBar>
+            <AppBarButton Name="Delete" Icon="Delete" Label="Delete" HorizontalAlignment="Left" Click="Delete_Click" />
+        </CommandBar>
         </Page.BottomAppBar>
     </Page>
 
