--- a/ToDo/AddPage.xaml
+++ b/ToDo/AddPage.xaml
@@ -17,31 +17,21 @@
            
            
         </Grid.RowDefinitions>
-        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Add new task</TextBlock>
+        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center" Name="appBarAddTextBlock" x:Uid="appBarAddTextBlock" ></TextBlock>
         <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
             <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
-
-
-                <TextBlock Margin="0,10,0,0">Title:</TextBlock>
+                <TextBlock Name="titleAddTextBlock" x:Uid="titleAddTextBlock"  Margin="0,10,0,0"></TextBlock>
                 <TextBox Margin="0,10,0,0" x:Name ="titleTextBox"  ></TextBox>
-                <TextBlock Margin="0,10,0,0">Description:</TextBlock>
+                <TextBlock Margin="0,10,0,0" Name="descriptionAddTextBlock" x:Uid="descriptionAddTextBlock"></TextBlock>
                 <TextBox Margin="0,10,0,0" x:Name ="valueTextBox" AcceptsReturn="False" TextWrapping="Wrap"></TextBox>
-
-
-
-
             </StackPanel>
-
         </Border>
-        
-
-        
     </Grid>
 
     <Page.BottomAppBar >
         <CommandBar Background="#03A9F4">
-            <AppBarButton Name="Back" Icon="Back" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
-            <AppBarButton Name="Accept" Icon="Accept" Label="Add" HorizontalAlignment="Left" Click="Accept_Click" />
+            <AppBarButton Name="Back" x:Uid="backButtonAdd" Icon="Back" HorizontalAlignment="Left" Click="Cancel_Click" />
+            <AppBarButton Name="Accept" x:Uid="acceptButtonAdd"  Icon="Accept" Label="Add" HorizontalAlignment="Left" Click="Accept_Click" />
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
