--- a/ToDo/DetailsPage.xaml
+++ b/ToDo/DetailsPage.xaml
@@ -18,21 +18,17 @@
 
         <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Edittask</TextBlock>
         <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
-
-
             <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
                 <TextBlock Margin="0,10,0,0" FontWeight="Bold" x:Name ="titleTextBox" TextWrapping="Wrap" Text="{Binding CurrentObject.title,  Mode=TwoWay}"></TextBlock>
                 <TextBlock Margin="0,10,0,0" x:Name ="valueTextBox" Text="{Binding CurrentObject.value, Mode=TwoWay}"  TextWrapping="Wrap"></TextBlock>
             </StackPanel>
-
         </Border>
-
     </Grid>
 
     <Page.BottomAppBar >
         <CommandBar Background="#03A9F4">
-            <AppBarButton Name="Back" Icon="Back" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
-            <AppBarButton Name="Edit" Icon="Edit" Label="Edit" HorizontalAlignment="Left" Click="Edit_Click" />
+            <AppBarButton Name="Back" Icon="Back" x:Uid="detailsCancelButton" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
+            <AppBarButton Name="Edit" x:Uid="detailsEditButton" Icon="Edit" Label="Edit" HorizontalAlignment="Left" Click="Edit_Click" />
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
