--- a/ToDo/EditPage.xaml
+++ b/ToDo/EditPage.xaml
@@ -20,26 +20,20 @@
      
         <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Edittask</TextBlock>
         <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
-
-            
-                <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
-
-
-                <TextBlock Margin="0,10,0,0">Title:</TextBlock>
+            <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
+                <TextBlock Margin="0,10,0,0" Name="titleEditTextBlock" x:Uid="titleEditTextBlock"></TextBlock>
                 <TextBox Margin="0,10,0,0" x:Name ="titleTextBox" Text="{Binding CurrentObject.title,  Mode=TwoWay}"></TextBox>
-                <TextBlock Margin="0,10,0,0">Description:</TextBlock>
+                <TextBlock Margin="0,10,0,0" Name="descriptionEditTextBlock" x:Uid="descriptionEditTextBlock"></TextBlock>
                 <TextBox Margin="0,10,0,0" x:Name ="valueTextBox" Text="{Binding CurrentObject.value, Mode=TwoWay}"  AcceptsReturn="False" TextWrapping="Wrap"></TextBox>
             </StackPanel>
-         
         </Border>
-        
     </Grid>
   
     <Page.BottomAppBar >
             <CommandBar Background="#03A9F4">
-                <AppBarButton Name="Back" Icon="Back" Label="Cancel" HorizontalAlignment="Left" Click="Cancel_Click" />
-                <AppBarButton Name="Accept" Icon="Accept" Label="Add" HorizontalAlignment="Left" Click="Accept_Click" />
-            <AppBarButton Name="Delete" Icon="Delete" Label="Delete" HorizontalAlignment="Left" Click="Delete_Click" />
+            <AppBarButton Name="Back" x:Uid="backButtonEdit" Icon="Back"  HorizontalAlignment="Left" Click="Cancel_Click" />
+            <AppBarButton Name="Accept" x:Uid="addButtonEdit" Icon="Accept"  HorizontalAlignment="Left" Click="Accept_Click" />
+            <AppBarButton Name="Delete" x:Uid="deleteButtonEdit" Icon="Delete"  HorizontalAlignment="Left" Click="Delete_Click" />
         </CommandBar>
         </Page.BottomAppBar>
     </Page>
