--- a/ToDo/LoginPage.xaml
+++ b/ToDo/LoginPage.xaml
@@ -20,15 +20,15 @@
 
         <StackPanel  Margin="0,50,0,0" Grid.Column="0" Grid.Row="1"  HorizontalAlignment="Center" Width="200">
 
-            <TextBlock >Please insert your username:</TextBlock>
+            <TextBlock  x:Name="loginTextBox" x:Uid="loginTextBox"   >Please insert your username:</TextBlock>
             <TextBox x:Name="usernameTextBox"/>
         
             
         </StackPanel>
 
         <StackPanel Margin="0,0,0,0" Grid.Column="0" Grid.Row="2"   >
-            <Button Click="onClickLoginButton" Content="Sign in" Background="#CDDC39" HorizontalAlignment="Center" />
-            <Button Click="onClickAboutButton" Content="About me" Background="#B3F5FC" Margin="0,10,0,0"  HorizontalAlignment="Center"/>
+            <Button Click="onClickLoginButton" x:Name="loginButton" x:Uid="loginButton" Background="#CDDC39" HorizontalAlignment="Center" />
+            <Button Click="onClickAboutButton"  x:Name="aboutButton" x:Uid="aboutButton"  Background="#B3F5FC" Margin="0,10,0,0"  HorizontalAlignment="Center"/>
         </StackPanel>
 
 
