--- a/ToDo/DetailsPage.xaml
+++ b/ToDo/DetailsPage.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center">Edittask</TextBlock>
+        <TextBlock Margin="0,10,0,0" HorizontalAlignment="Center" x:Uid="appBarDetailsTextBlock" ></TextBlock>
         <Border Background="#FFFFFF" Grid.Column="0" Grid.Row="1">
             <StackPanel Margin="20,50,0,0"   HorizontalAlignment="Left" Width="250" >
                 <TextBlock Margin="0,10,0,0" FontWeight="Bold" x:Name ="titleTextBox" TextWrapping="Wrap" Text="{Binding CurrentObject.title,  Mode=TwoWay}"></TextBlock>
